# economic-data-pipelines

./: README.md  pyproject.toml
src/can/: capital.py  combinations.py  combine.py  constants.py  construct.py  dump_yaml.py  filter_cap_matching.py  get_kwargs.py  get_mean_for_min_std.py  iterate_over_fixed_assets.py  labour.py  prices.py  push.py  read.py  some_read_stockpile.py  sort_series_ids_sets.py  stockpile.py  test.py  to_do_inspect_archive_ids.py
src/che/: read_che.py
src/cli/: main.py
src/core/: funcs.py  paths.py
src/datasets/bea/: constants.py  selectors.py
src/datasets/bls/: constants.py
src/datasets/frb/: constants.py  parsers.py  readers.py  transforms.py
src/datasets/imf/: constants.py  pipeline.py  selectors.py  transforms.py
src/datasets/statcan/: parsers.py  pipeline.py  schemas.py  selectors.py
src/econdata/providers/statcan/: provider.py  (+1 more)
src/imf/: test_imf_can.py
src/pipelines/: bea.py  bls.py  frb.py  imf.py  statcan.py
src/research/bls/: pipeline.py
src/research/che/: pipeline.py  readers.py
src/research/frb/: pipeline.py
src/sources/bea/: constants.py  metadata.py  parsers.py  transforms.py
src/sources/bls/: constants.py
src/sources/che/: readers.py
src/sources/frb/: constants.py  readers.py
src/sources/imf/: selectors.py  transforms.py
src/usa/bea/: get_usa_bea_archive_meta.py  read.py  read_fragmentize_dump.py  read_usa_bea_flatfiles.py  usa_bea_unallocated.py
src/usa/bls/: read_usa_bls.py  read_usa_bls_pcuomfgomfg.py
src/usa/frb/: read_usa_frb_g17.py  read_usa_frb_g17_h15.py  read_usa_frb_us3.py
