[project]
name = "econ-data-platform"
version = "0.1.0"
description = "Reproducible ingestion and normalization pipelines for public macroeconomic datasets (BEA, IMF, Federal Reserve, StatCan)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lxml>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "requests>=2.34.2",
]
